Homepage alignment issues fixed, Navbar UI fixed, Scroll bar hidden from the body

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,13 @@
 
 
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
 
 
 
